--- a/package.json
+++ b/package.json
@@ -11,15 +11,11 @@
   "author": "Dr. da Silva",
   "license": "ISC",
   "dependencies": {
-    "chai": "^4.3.4",
-    "chai-as-promised": "^7.1.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jest": "^27.1.0",
-    "mocha": "^9.1.1",
     "mongodb-memory-server": "^7.4.0",
-    "mongoose": "^6.0.3",
-    "sinon": "^11.1.2"
+    "mongoose": "^6.0.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
