--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A sample backend for our class app with database access (MongoDB) using Mongoose.",
   "main": "backend_with_db.js",
   "scripts": {
-    "test": "mocha './src/**/*.test.js'",
+    "test": "jest",
     "dev": "nodemon ./src/backend_with_db.js",
     "start": "node ./src/backend_with_db.js"
   },
